--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,10 @@ h6 {
 }
 .h3-responsive {
   font-size: 135%;
+  font-weight: 350;
+}
+.h3-responsive span {
+  border-bottom: 1px solid #3e454c4a;
 }
 .h4-responsive {
   font-size: 135%;
@@ -65,6 +69,10 @@ h6 {
   }
   .h3-responsive {
     font-size: 125%;
+    font-weight: 350;
+  }
+  .h3-responsive span {
+    border-bottom: 1px solid #3e454c4a;
   }
   .h4-responsive {
     font-size: 125%;
@@ -79,9 +87,14 @@ h6 {
   }
   .h2-responsive {
     font-size: 170%;
+    font-weight: 500;
   }
   .h3-responsive {
     font-size: 140%;
+    font-weight: 350;
+  }
+  .h3-responsive span {
+    border-bottom: 1px solid #3e454c4a;
   }
   .h4-responsive {
     font-size: 125%;
@@ -99,6 +112,10 @@ h6 {
   }
   .h3-responsive {
     font-size: 140%;
+    font-weight: 350;
+  }
+  .h3-responsive span {
+    border-bottom: 1px solid #3e454c4a;
   }
   .h4-responsive {
     font-size: 125%;
@@ -116,6 +133,10 @@ h6 {
   }
   .h3-responsive {
     font-size: 170%;
+    font-weight: 350;
+  }
+  .h3-responsive span {
+    border-bottom: 1px solid #3e454c4a;
   }
   .h4-responsive {
     font-size: 140%;
@@ -177,6 +198,7 @@ header .container .row .main-menu ul li a {
 }
 section {
   padding: 40px 0;
+  border-top: 1px solid #e3e3e3;
 }
 .about .contact .contact-title {
   font-weight: 500;
@@ -193,12 +215,49 @@ section {
 .about .contact-buttons {
   padding-top: 20px;
 }
-.about .contact-buttons .contact {
+.about .contact-buttons .button {
   padding: 15px;
+  margin-right: 20px;
+  min-width: 170px;
   text-align: center;
   background-color: #2185c5;
   display: inline-block;
   color: #fafafa;
   user-select: none;
   cursor: pointer;
+}
+.education .speciality {
+  margin-right: 10px;
+  float: left;
+}
+.education .short-name {
+  padding-top: 6px;
+  opacity: 0.8;
+}
+.education .year {
+  opacity: 0.6;
+}
+.portfolio .categories {
+  height: 50px;
+}
+.portfolio .categories ul {
+  height: 100%;
+  display: flex;
+}
+.portfolio .categories ul li {
+  display: flex;
+  padding: 0 15px;
+}
+.portfolio .categories ul li:hover {
+  background-color: #f0f0f0;
+  cursor: pointer;
+  transition: all 0.5sec ease;
+}
+.portfolio .categories ul li:hover > a {
+  color: #3e454c;
+}
+.portfolio .categories ul li a {
+  align-self: center;
+  text-decoration: none;
+  color: #3e454c;
 }
