--- a/css/style.css
+++ b/css/style.css
@@ -289,11 +289,70 @@ section {
   color: #3e454c;
   text-decoration: none;
 }
+.contact-section {
+  border-bottom: none;
+}
 .contact-section .contacts input {
   width: 100%;
-  padding: 5px;
-  margin-bottom: 20px;
+  height: 50px;
+  padding: 5px 20px;
+  margin-bottom: 30px;
+  border: none;
+  box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15);
 }
 .contact-section .text textarea {
+  padding: 15px 20px;
   width: 100%;
+  height: 130px;
+  resize: none;
+  border: none;
+  box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15);
+}
+.contact-section .button {
+  float: right;
+}
+.contact-section .button input {
+  background-color: white;
+  border: none;
+  padding: 15px;
+  margin-top: 20px;
+  color: #212529;
+  border-bottom: 1px solid #e3e3e3;
+  font-family: "Roboto", sans-serif;
+  box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15);
+  cursor: pointer;
+}
+.contact-section .button input:hover {
+  border: 1px solid #e3e3e3;
+  box-shadow: none;
+}
+footer {
+  min-height: 50px;
+  background-color: #3e454c;
+  padding-top: 15px;
+  margin-top: 10px;
+}
+footer .icons {
+  color: white;
+  position: relative;
+}
+footer .icons a {
+  position: relative;
+  top: -65px;
+  display: flex;
+  justify-content: center;
+  width: 60px;
+  height: 60px;
+  background: rgba(61, 61, 61, 0.6);
+  box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15);
+  border-radius: 50%;
+  margin: 20px;
+  cursor: pointer;
+  transition: .4s;
+}
+footer .icons a img {
+  width: 35px;
+}
+footer .copyright span {
+  color: white;
 }
