--- a/css/style.less
+++ b/css/style.less
@@ -414,18 +414,99 @@ section {
 }
 
 .contact-section {
+    border-bottom: none;
+
     .contacts {
 
         input {
             width: 100%;
-            padding: 5px;
-            margin-bottom: 20px;
+            height: 50px;
+            padding: 5px 20px;
+            margin-bottom: 30px;
+            border: none;
+            box-shadow: 0 5px 11px 0 rgba(0, 0, 0, .18), 0 4px 15px 0 rgba(0, 0, 0, .15);
+
         }
     }
 
     .text {
         textarea {
+            padding: 15px 20px;
             width: 100%;
+            height: 130px;
+            resize: none;
+            border: none;
+            box-shadow: 0 5px 11px 0 rgba(0, 0, 0, .18), 0 4px 15px 0 rgba(0, 0, 0, .15);
+
+        }
+    }
+
+    .button {
+        float: right;
+
+        input {
+            background-color: white;
+            border: none;
+            padding: 15px;
+            margin-top: 20px;
+            color: #212529;
+            //            border: 1px solid gray;
+            border-bottom: 1px solid #e3e3e3;
+            font-family: "Roboto", sans-serif;
+            box-shadow: 0 5px 11px 0 rgba(0, 0, 0, .18), 0 4px 15px 0 rgba(0, 0, 0, .15);
+
+            cursor: pointer;
+
+            &:hover {
+                border: 1px solid #e3e3e3;
+                box-shadow: none;
+
+
+            }
+
+        }
+
+    }
+}
+
+footer {
+    min-height: 50px;
+    background-color: @dark;
+    padding-top: 15px;
+    margin-top: 10px;
+
+    .icons {
+        color: white;
+        position: relative;
+
+        //        .icons-wrapper {
+        //            width: 100%;
+
+        a {
+            position: relative;
+            top: -65px;
+            display: flex;
+            justify-content: center;
+            width: 60px;
+            height: 60px;
+            background: hsla(0, 0%, 24%, 0.6);
+            box-shadow: 0 5px 11px 0 rgba(0, 0, 0, .18), 0 4px 15px 0 rgba(0, 0, 0, .15);
+
+            border-radius: 50%;
+            margin: 20px;
+            cursor: pointer;
+            transition: .4s;
+
+            img {
+                width: 35px;
+                //                height: 35px;
+            }
+        }
+    }
+
+    .copyright {
+        span {
+            color: white;
         }
     }
 }
