--- a/css/style.less
+++ b/css/style.less
@@ -268,6 +268,23 @@ section {
 }
 
 .about {
+
+    @media (max-width: 768px) {
+        .row {
+            flex-flow: wrap;
+
+            .about-me {
+                order: 2;
+            }
+
+            .photo-block {
+                order: 1;
+            }
+        }
+    }
+
+
+
     .contact {
         .contact-title {
             font-weight: 500;
