--- a/css/style.css
+++ b/css/style.css
@@ -43,9 +43,11 @@ h6 {
 }
 .h1-responsive {
   font-size: 150%;
+  font-weight: 500;
 }
 .h2-responsive {
   font-size: 145%;
+  font-weight: 500;
 }
 .h3-responsive {
   font-size: 135%;
@@ -63,9 +65,11 @@ h6 {
 @media (min-width: 576px) {
   .h1-responsive {
     font-size: 170%;
+    font-weight: 500;
   }
   .h2-responsive {
     font-size: 140%;
+    font-weight: 500;
   }
   .h3-responsive {
     font-size: 125%;
@@ -154,6 +158,58 @@ header {
   background-color: #3E454C;
   border-bottom: 1px solid #e3e3e3;
 }
+header .mobile-header {
+  display: none;
+}
+@media (max-width: 768px) {
+  header .container {
+    display: none;
+  }
+  header .mobile-header {
+    display: block;
+    height: 100%;
+    padding: 0;
+  }
+  header .mobile-header .wrapper {
+    padding: 10px 20px;
+    width: 100%;
+    align-items: center;
+    color: white;
+    justify-content: space-between;
+  }
+  header .mobile-header .wrapper .menu-btn {
+    display: block;
+    width: 50px;
+    height: 50px;
+    background-color: #fff;
+    border-radius: 50%;
+    position: relative;
+  }
+  header .mobile-header .wrapper .menu-btn span,
+  header .mobile-header .wrapper .menu-btn span::before,
+  header .mobile-header .wrapper .menu-btn span::after {
+    position: absolute;
+    top: 50%;
+    margin-top: -1px;
+    left: 50%;
+    margin-left: -10px;
+    width: 20px;
+    height: 2px;
+    background-color: #222;
+  }
+  header .mobile-header .wrapper .menu-btn span::before,
+  header .mobile-header .wrapper .menu-btn span::after {
+    content: '';
+    display: block;
+    transition: 0.2s;
+  }
+  header .mobile-header .wrapper .menu-btn span::before {
+    transform: translateY(-5px);
+  }
+  header .mobile-header .wrapper .menu-btn span::after {
+    transform: translateY(5px);
+  }
+}
 header .container {
   height: 100%;
 }
@@ -209,6 +265,7 @@ section {
   }
   .about .row .photo-block {
     order: 1;
+    margin-bottom: 30px;
   }
 }
 .about .contact .contact-title {
@@ -219,6 +276,7 @@ section {
   width: 250px;
   height: 250px;
   background-color: #ff7f66;
+  box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15);
 }
 .about .photo p {
   color: #fafafa;
@@ -236,6 +294,7 @@ section {
   color: #fafafa;
   user-select: none;
   cursor: pointer;
+  box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15);
 }
 .education .speciality {
   margin-right: 10px;
