--- a/css/style.less
+++ b/css/style.less
@@ -57,10 +57,14 @@ h6 {
 
 .h1-responsive {
     font-size: 150%;
+    font-weight: 500;
+
 }
 
 .h2-responsive {
     font-size: 145%;
+    font-weight: 500;
+
 }
 
 .h3-responsive {
@@ -84,10 +88,14 @@ h6 {
 @media (min-width: 576px) {
     .h1-responsive {
         font-size: 170%;
+        font-weight: 500;
+
     }
 
     .h2-responsive {
         font-size: 140%;
+        font-weight: 500;
+
     }
 
     .h3-responsive {
@@ -206,6 +214,72 @@ header {
     background-color: #3E454C;
     border-bottom: 1px solid #e3e3e3;
 
+    .mobile-header {
+        //        color: red;
+        //        background-color: #abc0d4;
+        display: none;
+    }
+
+
+
+    @media (max-width: 768px) {
+        .container {
+            display: none;
+        }
+
+        .mobile-header {
+            display: block;
+            height: 100%;
+            padding: 0;
+
+            .wrapper {
+                padding: 10px 20px;
+                width: 100%;
+                align-items: center;
+                color: white;
+                justify-content: space-between;
+
+                .menu-btn {
+                    display: block;
+                    width: 50px;
+                    height: 50px;
+                    background-color: #fff;
+                    border-radius: 50%;
+                    position: relative;
+                }
+
+                .menu-btn span,
+                .menu-btn span::before,
+                .menu-btn span::after {
+                    position: absolute;
+                    top: 50%;
+                    margin-top: -1px;
+                    left: 50%;
+                    margin-left: -10px;
+                    width: 20px;
+                    height: 2px;
+                    background-color: #222;
+                }
+
+                .menu-btn span::before,
+                .menu-btn span::after {
+                    content: '';
+                    display: block;
+                    transition: 0.2s;
+                }
+
+                .menu-btn span::before {
+                    transform: translateY(-5px);
+                }
+
+                .menu-btn span::after {
+                    transform: translateY(5px);
+                }
+            }
+        }
+    }
+
+
     .container {
         height: 100%;
 
@@ -279,6 +353,7 @@ section {
 
             .photo-block {
                 order: 1;
+                margin-bottom: 30px;
             }
         }
     }
@@ -296,6 +371,8 @@ section {
         width: 250px;
         height: 250px;
         background-color: @red;
+        box-shadow: 0 5px 11px 0 rgba(0, 0, 0, .18), 0 4px 15px 0 rgba(0, 0, 0, .15);
+
 
         p {
             color: @white;
@@ -304,6 +381,7 @@ section {
 
     .contact-buttons {
         padding-top: 20px;
+
 
         .button {
             padding: 15px;
@@ -315,6 +393,8 @@ section {
             color: @white;
             user-select: none;
             cursor: pointer;
+            box-shadow: 0 5px 11px 0 rgba(0, 0, 0, .18), 0 4px 15px 0 rgba(0, 0, 0, .15);
+
 
             .contact-me {
 
